changes are made in navbar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,16 @@
 
 
-.active{
+/* .active{
     background-color: brown;
+} */
+
+.active{
+    background-color: rgb(190, 99, 99);
+}
+.bg{
+  text-shadow: 1px 2px rgb(18, 186, 60); 
+  color: blue; 
+  margin: 20px; 
+  text-decoration: none;
+
 }
